--- a/styles.css
+++ b/styles.css
@@ -1,249 +1,61 @@
-
-
-/* Webfont: HKGrotesk-Light */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-Light.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-Light.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-Light.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-Light.svg#HKGrotesk-Light') format('svg'); /* Legacy iOS */
-    font-style: normal;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
+:root {
+    --side-bar-bg-color: #fafafa;
+    --control-text-color: #777;
 }
 
-/* Webfont: HKGrotesk-LightItalic */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-LightItalic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-LightItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-LightItalic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-LightItalic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-LightItalic.svg#HKGrotesk-LightItalic') format('svg'); /* Legacy iOS */
-    font-style: italic;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-}
+@include-when-export url(https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext);
 
-/* Webfont: HKGrotesk-Regular */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-Regular.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-Regular.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-Regular.svg#HKGrotesk-Regular') format('svg'); /* Legacy iOS */
+@font-face {
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: normal;
-    text-rendering: optimizeLegibility;
+    src: local('Open Sans Regular'),url('./github/400.woff') format('woff');
 }
 
-/* Webfont: HKGrotesk-Italic */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-Italic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-Italic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-Italic.svg#HKGrotesk-Italic') format('svg'); /* Legacy iOS */
+@font-face {
+    font-family: 'Open Sans';
     font-style: italic;
     font-weight: normal;
-    text-rendering: optimizeLegibility;
+    src: local('Open Sans Italic'),url('./github/400i.woff') format('woff');
 }
 
-/* Webfont: HKGrotesk-Medium */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-Medium.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-Medium.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-Medium.svg#HKGrotesk-Medium') format('svg'); /* Legacy iOS */
-    font-style: normal;
-    font-weight: 500;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: HKGrotesk-MediumItalic */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-MediumItalic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-MediumItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-MediumItalic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-MediumItalic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-MediumItalic.svg#HKGrotesk-MediumItalic') format('svg'); /* Legacy iOS */
-    font-style: italic;
-    font-weight: 500;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: HKGrotesk-Bold */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-Bold.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-Bold.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-Bold.svg#HKGrotesk-Bold') format('svg'); /* Legacy iOS */
+@font-face {
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: bold;
-    text-rendering: optimizeLegibility;
+    src: local('Open Sans Bold'),url('./github/700.woff') format('woff');
 }
 
-/* Webfont: HKGrotesk-BoldItalic */@font-face {
-    font-family: 'HKGrotesk';
-    src: url('./minimalism/HKGrotesk-BoldItalic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/HKGrotesk-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/HKGrotesk-BoldItalic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/HKGrotesk-BoldItalic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/HKGrotesk-BoldItalic.svg#HKGrotesk-BoldItalic') format('svg'); /* Legacy iOS */
+@font-face {
+    font-family: 'Open Sans';
     font-style: italic;
     font-weight: bold;
-    text-rendering: optimizeLegibility;
+    src: local('Open Sans Bold Italic'),url('./github/700i.woff') format('woff');
 }
-
-/* Webfont: OfficeCodePro-Light */@font-face {
-    font-family: 'OfficeCodePro';
-    src: url('./minimalism/OfficeCodePro-Light.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/OfficeCodePro-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/OfficeCodePro-Light.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/OfficeCodePro-Light.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/OfficeCodePro-Light.svg#OfficeCodePro-Light') format('svg'); /* Legacy iOS */
-    font-style: normal;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: OfficeCodePro-LightItalic */@font-face {
-    font-family: 'OfficeCodePro';
-    src: url('./minimalism/OfficeCodePro-LightItalic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/OfficeCodePro-LightItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/OfficeCodePro-LightItalic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/OfficeCodePro-LightItalic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/OfficeCodePro-LightItalic.svg#OfficeCodePro-LightItalic') format('svg'); /* Legacy iOS */
-    font-style: italic;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: OfficeCodePro-Regular */@font-face {
-    font-family: 'OfficeCodePro';
-    src: url('./minimalism/OfficeCodePro-Regular.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/OfficeCodePro-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/OfficeCodePro-Regular.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/OfficeCodePro-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/OfficeCodePro-Regular.svg#OfficeCodePro-Regular') format('svg'); /* Legacy iOS */
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: OfficeCodePro-Italic */@font-face {
-    font-family: 'OfficeCodePro';
-    src: url('./minimalism/OfficeCodePro-Italic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/OfficeCodePro-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/OfficeCodePro-Italic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/OfficeCodePro-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/OfficeCodePro-Italic.svg#OfficeCodePro-Italic') format('svg'); /* Legacy iOS */
-    font-style: italic;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: OfficeCodePro-Bold */@font-face {
-    font-family: 'OfficeCodePro';
-    src: url('./minimalism/OfficeCodePro-Bold.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/OfficeCodePro-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/OfficeCodePro-Bold.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/OfficeCodePro-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/OfficeCodePro-Bold.svg#OfficeCodePro-Bold') format('svg'); /* Legacy iOS */
-    font-style: normal;
-    font-weight: bold;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: OfficeCodePro-BoldItalic */@font-face {
-    font-family: 'OfficeCodePro';
-    src: url('./minimalism/OfficeCodePro-BoldItalic.eot'); /* IE9 Compat Modes */
-    src: url('./minimalism/OfficeCodePro-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./minimalism/OfficeCodePro-BoldItalic.woff') format('woff'), /* Modern Browsers */
-         url('./minimalism/OfficeCodePro-BoldItalic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./minimalism/OfficeCodePro-BoldItalic.svg#OfficeCodePro-BoldItalic') format('svg'); /* Legacy iOS */
-    font-style: italic;
-    font-weight: bold;
-    text-rendering: optimizeLegibility;
-}
-
 
 html {
-    background: #FFFFFF;
-    /* or
-    text-shadow: #fff 0px 1px 1px;*/
-    text-rendering: geometricPrecision;
+    font-size: 16px;
 }
 
 body {
-    font-family: 'HKGrotesk', sans-serif;
-    font-weight: 300;
-    font-size: 1.275em;
-    letter-spacing: 0px;
-    color: #333333;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: subpixel-antialiased;
-    /*-webkit-text-stroke: 0.45px;
-    // or*/
-    -webkit-text-stroke: 0.45px rgba(51, 51, 51, 0.97);
-    line-height: 1.6em;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    font-family: "Open Sans","Clear Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: rgb(51, 51, 51);
+    line-height: 1.6;
 }
 
-strong {
-    font-family: 'HKGrotesk', serif;
-    font-weight: 500;
-    color: #303336;
-}
-
-em {
-    font-family: 'HKGrotesk', serif;
-    font-weight: normal;
-    font-style: italic;
-}
-
-mark {
-    color: #000000;
-    background: #D3FFA4;
-    padding: 1px 1px 1px 1px;
-}
-
-div.md-toc {
-    font-family: 'HKGrotesk', serif;
-    font-size: 18px;
-}
-
-#write{
-    max-width: 710px;
-    margin: 0 auto;
-    padding: 20px 30px 40px 30px;
-    padding-top: 20px;
+#write {
+    max-width: 860px;
+  	margin: 0 auto;
+  	padding: 30px;
     padding-bottom: 100px;
 }
 #write > ul:first-child,
 #write > ol:first-child{
-    margin-top: 40px;
-}
-
-body > *:first-child {
-    margin-top: 0 !important;
-}
-
-body > *:last-child {
-    margin-bottom: 0 !important;
+    margin-top: 30px;
 }
 
 a {
-    color: #DD4C4F;
-    text-decoration: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: subpixel-antialiased;
-    /*-webkit-text-stroke: 0.45px;
-    // or*/
-    -webkit-text-stroke: 0.55px rgba(221, 76, 79, 0.97);
+    color: #4183C4;
 }
 h1,
 h2,
@@ -251,21 +63,19 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "HKGrotesk",sans-serif;
-    font-weight: bold;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;
     position: relative;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    line-height: 1.4;
     cursor: text;
 }
-
 h1:hover a.anchor,
 h2:hover a.anchor,
 h3:hover a.anchor,
 h4:hover a.anchor,
 h5:hover a.anchor,
 h6:hover a.anchor {
-    /*background: url("../../images/modules/styleguide/para.png") no-repeat 10px center;*/
     text-decoration: none;
 }
 h1 tt,
@@ -292,120 +102,54 @@ h6 tt,
 h6 code {
     font-size: inherit;
 }
-
 h1 {
-    font-size: 2.4em;
-    margin-top: 1.2rem;
-    margin-bottom: 1.2rem;
     padding-bottom: .3em;
+    font-size: 2.25em;
     line-height: 1.2;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;
+    border-bottom: 1px solid #eee;
 }
 h2 {
-    font-size: 1.8em;
-    margin-top: 1.2rem;
-    margin-bottom: 1.2rem;
-    padding-bottom: .3em;
-    line-height: 1.2;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;
+   padding-bottom: .3em;
+    font-size: 1.75em;
+    line-height: 1.225;
+    border-bottom: 1px solid #eee;
 }
 h3 {
     font-size: 1.5em;
-    margin-top: 1.2rem;
-    margin-bottom: 1.2rem;
-    padding-bottom: .3em;
-    line-height: 1.2;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;
+    line-height: 1.43;
 }
 h4 {
-    font-size: 1.2em;
-    line-height: 1.2;
-    padding-bottom: .3em;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;}
-h5 {
-    font-size: 1.1em;
-    line-height: 1.2;
-    padding-bottom: .3em;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;}
-h6 {
-    font-size: 1.0em;
-    line-height: 1.2;
-    padding-bottom: .3em;
-    letter-spacing: -0.45px;
-    word-spacing: 0.5px;
+    font-size: 1.25em;
 }
-
-
-  h1 { color: #303336;}
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 { color: #303336;}
-
+h5 {
+    font-size: 1em;
+}
+h6 {
+   font-size: 1em;
+    color: #777;
+}
 p,
 blockquote,
 ul,
 ol,
 dl,
 table{
-    list-style-type: disc
     margin: 0.8em 0;
-    margin-top: 1.6rem;
-    margin-bottom: 1.6rem;
+}
+li>ol,
+li>ul {
+    margin: 0 0;
 }
 hr {
-    height: 4px;
+    height: 2px;
     padding: 0;
     margin: 16px 0;
-    background-color: #FFFFFF;
+    background-color: #e7e7e7;
     border: 0 none;
     overflow: hidden;
     box-sizing: content-box;
-    border-bottom: 1px solid #ddd;
 }
 
-body > h2:first-child {
-    margin-top: 0;
-    padding-top: 0;
-}
-body > h1:first-child {
-    margin-top: 0;
-    padding-top: 0;
-}
-body > h1:first-child + h2 {
-    margin-top: 0;
-    padding-top: 0;
-}
-body > h3:first-child,
-body > h4:first-child,
-body > h5:first-child,
-body > h6:first-child {
-    margin-top: 0;
-    padding-top: 0;
-}
-a:first-child h1,
-a:first-child h2,
-a:first-child h3,
-a:first-child h4,
-a:first-child h5,
-a:first-child h6 {
-    margin-top: 0;
-    padding-top: 0;
-}
-h1 p,
-h2 p,
-h3 p,
-h4 p,
-h5 p,
-h6 p {
-    margin-top: 0;
-}
 li p.first {
     display: inline-block;
 }
@@ -422,17 +166,9 @@ ol:last-child {
     margin-bottom: 0;
 }
 blockquote {
-    color: #26344A;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: subpixel-antialiased;
-    /*-webkit-text-stroke: 0.45px;
-    // or*/
-    -webkit-text-stroke: 0.45px rgba(38, 52, 74, 0.97);
-    border-left: 3.5px solid #DD4C4F;
-    margin-left: -1em;
-    padding: 0.2em 1em;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    border-left: 4px solid #dfe2e5;
+    padding: 0 15px;
+    color: #777777;
 }
 blockquote blockquote {
     padding-right: 0;
@@ -442,23 +178,23 @@ table {
     word-break: initial;
 }
 table tr {
-    border-top: 1px solid #cccccc;
+    border-top: 1px solid #dfe2e5;
     margin: 0;
     padding: 0;
 }
-table tr:nth-child(2n) {
+table tr:nth-child(2n),
+thead {
     background-color: #f8f8f8;
 }
 table tr th {
     font-weight: bold;
-    border: 1px solid #cccccc;
-    text-align: left;
+    border: 1px solid #dfe2e5;
+    border-bottom: 0;
     margin: 0;
     padding: 6px 13px;
 }
 table tr td {
-    border: 1px solid #cccccc;
-    text-align: left;
+    border: 1px solid #dfe2e5;
     margin: 0;
     padding: 6px 13px;
 }
@@ -471,48 +207,43 @@ table tr td:last-child {
     margin-bottom: 0;
 }
 
-.CodeMirror-gutters {
-    border-right: 1px solid #ddd;
+.CodeMirror-lines {
+    padding-left: 4px;
+}
+
+.code-tooltip {
+    box-shadow: 0 1px 1px 0 rgba(0,28,36,.3);
+    border-top: 1px solid #eef2f2;
 }
 
 .md-fences,
 code,
 tt {
-    border: 1px solid #ddd;
-    background: #f8f8f8;
+    border: 1px solid #e7eaed;
+    background-color: #f8f8f8;
+    border-radius: 3px;
     padding: 0;
-    font-family: 'OfficeCodePro', monospace;
     padding: 2px 4px 0px 4px;
-    font-size: 17px;
+    font-size: 0.9em;
+}
+
+code {
+    background-color: #f3f4f4;
+    padding: 0 2px 0 2px;
 }
 
 .md-fences {
-    font-family: 'OfficeCodePro', monospace;
     margin-bottom: 15px;
     margin-top: 15px;
-    padding: 0.2em 1em;
     padding-top: 8px;
     padding-bottom: 6px;
 }
-.task-list{
-    padding-left: 0;
+
+
+.md-task-list-item > input {
+  margin-left: -1.3em;
 }
 
-.task-list-item {
-    padding-left:32px;
-}
-
-.task-list-item input {
-  top: 3px;
-  left: 8px;
-}
-
-@media screen and (min-width: 914px) {
-    /*body {
-        width: 854px;
-        margin: 0 auto;
-    }*/
-}
 @media print {
     html {
         font-size: 13px;
@@ -527,10 +258,10 @@ tt {
 }
 
 .md-fences {
-    background-color: #E5E7EA;
+	background-color: #f8f8f8;
 }
 #write pre.md-meta-block {
-    padding: 1rem;
+	padding: 1rem;
     font-size: 85%;
     line-height: 1.45;
     background-color: #f7f7f7;
@@ -541,36 +272,40 @@ tt {
 }
 
 .mathjax-block>.code-tooltip {
-    bottom: .375rem;
+	bottom: .375rem;
+}
+
+.md-mathjax-midline {
+    background: #fafafa;
 }
 
 #write>h3.md-focus:before{
-    left: -1.5625rem;
-    top: .375rem;
+	left: -1.5625rem;
+	top: .375rem;
 }
 #write>h4.md-focus:before{
-    left: -1.5625rem;
-    top: .285714286rem;
+	left: -1.5625rem;
+	top: .285714286rem;
 }
 #write>h5.md-focus:before{
-    left: -1.5625rem;
-    top: .285714286rem;
+	left: -1.5625rem;
+	top: .285714286rem;
 }
 #write>h6.md-focus:before{
-    left: -1.5625rem;
-    top: .285714286rem;
+	left: -1.5625rem;
+	top: .285714286rem;
 }
 .md-image>.md-meta {
-    border: 1px solid #ddd;
+    /*border: 1px solid #ddd;*/
     border-radius: 3px;
-    font-family: Consolas, "Liberation Mono", Courier, monospace;
-    padding: 2px 4px 0px 4px;
+    padding: 2px 0px 0px 4px;
     font-size: 0.9em;
     color: inherit;
 }
 
-.md-tag{
-    color: inherit;
+.md-tag {
+    color: #a7a7a7;
+    opacity: 1;
 }
 
 .md-toc {
@@ -581,7 +316,6 @@ tt {
 .sidebar-tabs {
     border-bottom: none;
 }
-
 
 #typora-quick-open {
     border: 1px solid #ddd;
@@ -595,25 +329,46 @@ tt {
     border-width: 1px;
 }
 
-#md-notification:before {
-    top: 10px;
-}
-
 /** focus mode */
 .on-focus-mode blockquote {
     border-left-color: rgba(85, 85, 85, 0.12);
 }
 
 header, .context-menu, .megamenu-content, footer{
-    font-family: "Lyon Display", sans-serif;
+    font-family: "Segoe UI", "Arial", sans-serif;
 }
 
-.CodeMirror {
-    /* Set height, width, borders, and global font properties here */
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: subpixel-antialiased;
-    /*-webkit-text-stroke: 0.45px;
-    // or*/
-    font-family: 'OfficeCodePro', monospace;
-    font-size: 1.000em;
+.file-node-content:hover .file-node-icon,
+.file-node-content:hover .file-node-open-state{
+    visibility: visible;
+}
+
+.mac-seamless-mode #typora-sidebar {
+    background-color: #fafafa;
+    background-color: var(--side-bar-bg-color);
+}
+
+.md-lang {
+    color: #b4654d;
+}
+
+.html-for-mac .context-menu {
+    --item-hover-bg-color: #E6F0FE;
+}
+
+#md-notification .btn {
+    border: 0;
+}
+
+.dropdown-menu .divider {
+    border-color: #e5e5e5;
+}
+
+.ty-preferences .window-content {
+    background-color: #fafafa;
+}
+
+.ty-preferences .nav-group-item.active {
+    color: white;
+    background: #999;
 }
